--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MyAccount1</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+	<head>
+		<title>MyAccount1</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<%= csrf_meta_tags %>
+		<%= csp_meta_tag %>
+		<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+		<%= javascript_importmap_tags %>
+	</head>
+	<body>
+		<div class="container">
+			<% if notice.present? %>
+				<div class="alert alert-primary mt-4" role="alert">
+					<%= notice %>
+				</div>
+			<% end %>
+			<% if alert.present? %>
+				<div class="alert alert-danger mt-4" role="alert">
+					<%= alert %>
+				</div>
+			<% end %>
+			<%= yield %>
+		</div>
+	</body>
 </html>
