--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 		<%= javascript_importmap_tags %>
 	</head>
 	<body>
+		<%= render 'layouts/header' %>
 		<div class="container">
 			<% if notice.present? %>
 				<div class="alert alert-primary mt-4" role="alert">
