--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: article) do |form| %>
+<%= form_with(model: [:admin,article]) do |form| %>
 	<% if article.errors.any? %>
 		<div style="color: red">
 			<h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -13,7 +13,7 @@
 		<%= form.label :title, style: "display: block", class: 'form-label' %>
 		<%= form.text_field :title, class: 'form-control' %>
 	</div>
-	<div>
+	<div class='my-4'>
 		<%= form.label :content, style: "display: block" %>
 		<%= form.rich_text_area :content, class: 'form-control' %>
 	</div>
@@ -21,7 +21,7 @@
 		<%= form.label :active, style: "display: block" %>
 		<%= form.check_box :active %>
 	</div>
-	<div>
-		<%= form.submit %>
+	<div cass='mt-2'>
+		<%= form.submit class: 'btn btn-danger'%>
 	</div>
 <% end %>
