--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% @articles.each do |article| %>
+	<div class="card">
+		<div class="card-body">
+			<h5 class="card-title"><%= article.title %></h5>
+			<div>
+				<%= article.content %>
+			</div>
+		</div>
+        <div class="card-footer">
+        <%= link_to "Show", list_articles_path, class: 'btn btn-info' %>
+        </div>
+	</div>
+
+<% end %>
